--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -1,111 +1,140 @@
+a:link, a:visited, a:active {
+    text-decoration:none;
+    color: white;
+}
+
 *{
     margin: 0px;
     padding: 0px;
-    list-style: none;
     font-family: 'Open Sans', sans-serif;
-}
 
+}
+/*CABEZERA*/
 header{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    height: 120px;
-    width: 100%;
-    background-color: rgb(65, 60, 60);
+    background-color: rgb(32, 29, 29);
     color: white;
-}
-.logo{
-    flex-grow: 2;
-    padding-left: 20px;
-}
-.logo h1{
-    font-size: 2em;
-}
-
-#menu{
-    flex-grow: 1;
-    font-size: 1.3em;
-}
-#menu ul{
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 30px;
-  
+    position: sticky;
+    top:0;
+}
+.logo{
+    margin: 1rem;
+    font-size: 1.7rem;
+    font-weight: bold;
+
+}
+.logo i{
+    padding: 0px 10px;
+}
+#check{
+    display: none;
+}
+.menu{
+    list-style: none;
+    padding: 0;
+    margin: 0;    
+}
+.menu li{
+    display: inline;
+    padding: 2rem;
+}
+.menu li a{
+    font-size: 1.2em;
 }
 
-#top{
-    background-image: url("media/banner.jpg");
-    background-size: 100% 100%;
+.bar-btn{
+  display: none;
+}
+
+/*CUERPO*/
+
+.parte{
+    min-height:400px;
+}
+/*TOP*/
+.top{
     display: flex;
-    flex-direction: column;
-    color: white;
-    height: 450px;
-    padding-left: 20px;
+    flex-direction:column;
     justify-content: center;
+    color: white;
+    background-size: 100% 100%;
+    align-items: flex-start;
+    padding: 1rem;
 }
-#top h1{
-    font-size: 3em;
+.top h1{
+    font-size: 3rem;
 }
-#top h2{
-    font-size: 2em;
-    padding-bottom: 10px;
+.top h2{
+    font-size: 2rem;
 }
 
 .boton{
     border: 2px solid white;
     text-align: center;
     font-size: 1.5em;
-    padding: 10px;
-    display: inline-block;
-    width: 110px;
-}
-
-
-
-#center{
-    display: flex;
-    flex-direction: column;
-    height: 450px;
-    padding-left: 20px;
-}
-#center h2{
-    text-transform: uppercase;
-    padding-top: 20px;
-    padding-bottom: 20px;
-
-}
-.galeria{
-    display: flex;
-    flex-direction: row;
-    text-align: center;
-    justify-content: space-between;
-    align-items: center;
-    padding: 60px;
-}
-
-.galeria p{
-    padding-bottom: 15px;
-    font-weight: bold;
+    padding: 10px 15px;
     
 }
 
+/*CENTER*/
+.center{
+    text-align: justify;
+}
+.center h2{
+    text-transform: uppercase;
+    padding: 10px;
+    font-size: 1.4rem;
+}
+.center p{
+    margin: 0px 10px;
+    
+}
 
-#bottom{
+.galeria{
+    text-align: center;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.item{
     display: flex;
     flex-direction: column;
-    height: 450px;
-    text-align: center;
-    background-color: rgb(65, 60, 60);
-    color: white
-}
-#bottom p{
-    font-weight: bold;
+    justify-content: center;
 }
 
-#bottom .galeria div img{
+.cuadrada{
+    padding: 5rem;
+    flex-wrap: nowrap;
+
+}
+.cuadrada .item{
+    margin: 0 min(0.5rem);
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-basis: auto;
+
+}
+
+/*BOTTOM*/
+.bottom{
+    text-align: center;
+    font-weight: bold;
+    color: white;
+    background-color: rgb(32, 29, 29);
+}
+
+.redonda{
+    flex-wrap: wrap;
+}
+
+.redonda div{
+    margin: 2rem 0;
+}
+
+.redonda div img{
     height: 200px;
     width: 200px;
     border-radius: 50%;
@@ -113,8 +142,72 @@ header{
     margin-bottom: 50px;
 }
 
+/*FOOTER*/
 footer{
-    padding-left: 20px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding: 4px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 2rem;
 }
+
+/*MEDIAQUERYS*/
+
+@media (max-width: 1024px){
+  
+    .cuadrada{
+        padding-bottom: 5px;
+     }
+
+     .menu{
+         display: block;
+        position: fixed;
+        width: 100%;
+        height: 0vh;
+        right: 0px;
+        top:69px;
+        background: rgb(49, 49, 49,0.8);
+       
+        transition: all .5s;
+
+    }
+    .menu li{
+        display: none;
+        line-height: 30px;
+        transition: all .5s;
+        border-bottom: 2px white solid;
+        padding: 50px 32px;
+    
+    }
+    .menu li a{
+        font-size: 1.2em;
+        padding-bottom: 50px;
+        transition: all .5s;
+    }
+    
+    .bar-btn{
+        display:flex;
+        font-size: 25px;
+        color: white;
+        margin-right: 20px;
+    } 
+
+    #check:checked ~ .menu{
+        height: 100vh;
+    }
+    #check:checked ~ .menu li{
+        display: block;
+    }
+
+}
+
+@media (max-width: 768px){
+    .cuadrada{
+        flex-wrap: wrap;
+    }
+    .redonda{
+        flex-direction: column;
+    }
+}
+
+
+
