--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -31,6 +31,8 @@ header{
 #check{
     display: none;
 }
+/*NAV*/
+
 .menu{
     list-style: none;
     padding: 0;
@@ -42,6 +44,10 @@ header{
 }
 .menu li a{
     font-size: 1.2em;
+}
+
+.menu li:hover{
+    background-color: rgb(253, 253, 253, 0.7);
 }
 
 .bar-btn{
@@ -117,6 +123,11 @@ header{
     flex-basis: auto;
 
 }
+.cuadrada .item img:hover{
+    transform: scale(1.5);
+    margin: 0%;
+
+}
 
 /*BOTTOM*/
 .bottom{
@@ -142,6 +153,15 @@ header{
     margin-bottom: 50px;
 }
 
+
+.redonda .item img:hover{
+    transform: scale(1.5);
+    margin: 0%;
+    margin-top: 2rem;
+}
+
+
+
 /*FOOTER*/
 footer{
     padding: 4px;
@@ -157,12 +177,17 @@ footer{
     .cuadrada{
         padding-bottom: 5px;
      }
+     .cuadrada .item img:hover{
+        transform: scale(1.5);
+        margin: 0%;
+        margin-bottom: 3rem;
+    }
 
      .menu{
          display: block;
         position: fixed;
-        width: 100%;
-        height: 0vh;
+        width: 0vh;
+        height: 100vh;
         right: 0px;
         top:69px;
         background: rgb(49, 49, 49,0.8);
@@ -192,7 +217,7 @@ footer{
     } 
 
     #check:checked ~ .menu{
-        height: 100vh;
+        width: 100%;
     }
     #check:checked ~ .menu li{
         display: block;
